frontend/test/should_fail/exectype_SetmapRem3.grg
using exectype;

rule r
{
	modify  {
		exec(u:map<AA,H> =map<AA,H> && v:A=varia && u.rem(v));
	}
}